# platform.core.api.nfc

./: AUTHORS  CMakeLists.txt  capi-network-nfc.pc.in  project.config
TC/: config
TC/testcase/: Makefile  tslist  utc_network_nfc.c  utc_network_nfc_ndef_message.c  utc_network_nfc_ndef_record.c  utc_network_nfc_se.c  utc_network_nfc_snep.c  utc_network_nfc_test.c
debian/: changelog  control  rules
doc/: nfc_doc.h
include/: net_nfc.h  net_nfc_client.h  net_nfc_client_context.h  net_nfc_client_handover.h  net_nfc_client_hce.h  net_nfc_client_hce_ipc.h  net_nfc_client_llcp.h  net_nfc_client_manager.h  net_nfc_client_ndef.h  net_nfc_client_p2p.h  net_nfc_client_se.h  net_nfc_client_snep.h  net_nfc_client_system_handler.h  net_nfc_client_tag.h  net_nfc_client_tag_felica.h  net_nfc_client_tag_internal.h  net_nfc_client_tag_jewel.h  net_nfc_client_test.h  net_nfc_client_transceive.h  net_nfc_client_util_internal.h  net_nfc_data.h  net_nfc_ndef_message.h  net_nfc_ndef_message_handover.h  net_nfc_ndef_record.h  net_nfc_sign_record.h  net_nfc_tag_mifare.h  net_nfc_target_info.h  nfc.h  nfc_common.h  nfc_internal.h  nfc_private.h
packaging/: capi-network-nfc.spec
src/: net_nfc_client.c  net_nfc_client_context.c  net_nfc_client_data.c  net_nfc_client_handover.c  net_nfc_client_hce.c  net_nfc_client_hce_ipc.c  net_nfc_client_llcp.c  net_nfc_client_manager.c  net_nfc_client_ndef.c  net_nfc_client_ndef_message.c  net_nfc_client_ndef_message_handover.c  net_nfc_client_ndef_record.c  net_nfc_client_p2p.c  net_nfc_client_se.c  net_nfc_client_sign_record.c  net_nfc_client_snep.c  net_nfc_client_system_handler.c  net_nfc_client_tag.c  net_nfc_client_tag_felica.c  net_nfc_client_tag_jewel.c  net_nfc_client_tag_mifare.c  net_nfc_client_target_info.c  net_nfc_client_test.c  net_nfc_client_transceive.c  nfc.c  nfc_card_emulation.c  nfc_common.c  nfc_manager.c  nfc_ndef.c  nfc_p2p.c  nfc_p2p_handover.c  nfc_tag.c
test/: CMakeLists.txt  network_nfc_test.c  nfc_unit_test.c
test/include/: nfc_common.h  nfc_internal.h
test/src/: nfc_card_emulation.c  nfc_common.c  nfc_manager.c  nfc_ndef.c  nfc_p2p.c  nfc_tag.c
